--- a/index.html
+++ b/index.html
@@ -151,23 +151,23 @@
         <h2>🌍 Supported Languages</h2>
         <p>CamLingo supports 17 languages for both interface display and vocabulary learning:</p>
         <div class="language-grid">
-            <div class="language-tag">English 🇺🇸</div>
-            <div class="language-tag">中文 🇨🇳</div>
-            <div class="language-tag">日本語 🇯🇵</div>
-            <div class="language-tag">한국어 🇰🇷</div>
-            <div class="language-tag">Français 🇫🇷</div>
-            <div class="language-tag">Deutsch 🇩🇪</div>
-            <div class="language-tag">Español 🇪🇸</div>
-            <div class="language-tag">Italiano 🇮🇹</div>
-            <div class="language-tag">Português 🇵🇹</div>
-            <div class="language-tag">Русский 🇷🇺</div>
-            <div class="language-tag">العربية 🇸🇦</div>
-            <div class="language-tag">हिन्दी 🇮🇳</div>
-            <div class="language-tag">ไทย 🇹🇭</div>
-            <div class="language-tag">Việt Nam 🇻🇳</div>
-            <div class="language-tag">Nederlands 🇳🇱</div>
-            <div class="language-tag">Türkçe 🇹🇷</div>
-            <div class="language-tag">Polski 🇵🇱</div>
+            <div class="language-tag">English</div>
+            <div class="language-tag">中文</div>
+            <div class="language-tag">日本語</div>
+            <div class="language-tag">한국어</div>
+            <div class="language-tag">Français</div>
+            <div class="language-tag">Deutsch</div>
+            <div class="language-tag">Español</div>
+            <div class="language-tag">Italiano</div>
+            <div class="language-tag">Português</div>
+            <div class="language-tag">Русский</div>
+            <div class="language-tag">العربية</div>
+            <div class="language-tag">हिन्दी</div>
+            <div class="language-tag">ไทย</div>
+            <div class="language-tag">Việt Nam</div>
+            <div class="language-tag">Nederlands</div>
+            <div class="language-tag">Türkçe</div>
+            <div class="language-tag">Polski</div>
         </div>
 
         <h2>❓ Frequently Asked Questions</h2>
