--- a/privacy.html
+++ b/privacy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>CamLingo - Privacy Policy</title>
+    <title>CamLingo - Privacy Policy</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
@@ -32,6 +32,7 @@
             border: 1px solid #007AFF;
             border-radius: 20px;
             font-size: 14px;
+            margin-left: 8px;
         }
         .language-switch a:hover {
             background-color: #007AFF;
@@ -99,9 +100,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="language-switch">
-            <!-- English only version -->
-        </div>
+
         
         <a href="index.html" class="back-link">← Back to Support</a>
         
