--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         }
         .language-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
             gap: 10px;
             margin: 15px 0;
         }
@@ -111,7 +111,9 @@
 <body>
     <div class="container">
         <div class="language-switch">
-            <!-- English only version -->
+            <a href="index-zh-cn.html">简体中文</a>
+            <a href="index-zh-tw.html">繁體中文</a>
+            <a href="index-ja.html">日本語</a>
         </div>
         
         <div class="app-icon">📷</div>
@@ -134,7 +136,7 @@
                 <li><strong>Photo Album Recognition:</strong> Select images from your photo library and let AI identify objects to learn related vocabulary</li>
                 <li><strong>Camera Recognition:</strong> Take photos in real-time and instantly get vocabulary learning content</li>
                 <li><strong>Local Storage:</strong> Save your photos and learning records on your device for offline review</li>
-                <li><strong>17 Language Support:</strong> Interface and vocabulary learning in 17 languages</li>
+                <li><strong>22 Language Support:</strong> Interface and vocabulary learning in 22 languages</li>
                 <li><strong>Personalized Learning:</strong> Set your learning language and native language preferences</li>
                 <li><strong>Offline Review:</strong> Access your saved photos and vocabulary anytime</li>
             </ul>
@@ -149,23 +151,28 @@
         </div>
 
         <h2>🌍 Supported Languages</h2>
-        <p>CamLingo supports 17 languages for both interface display and vocabulary learning:</p>
+        <p>CamLingo supports 22 languages for both interface display and vocabulary learning:</p>
         <div class="language-grid">
-            <div class="language-tag">English</div>
-            <div class="language-tag">中文</div>
+            <div class="language-tag">English (US)</div>
+            <div class="language-tag">English (UK)</div>
+            <div class="language-tag">简体中文</div>
+            <div class="language-tag">繁體中文</div>
             <div class="language-tag">日本語</div>
             <div class="language-tag">한국어</div>
-            <div class="language-tag">Français</div>
+            <div class="language-tag">Español (España)</div>
+            <div class="language-tag">Español (México)</div>
+            <div class="language-tag">Français (France)</div>
+            <div class="language-tag">Français (Canada)</div>
+            <div class="language-tag">Português (Portugal)</div>
+            <div class="language-tag">Português (Brasil)</div>
             <div class="language-tag">Deutsch</div>
-            <div class="language-tag">Español</div>
-            <div class="language-tag">Italiano</div>
-            <div class="language-tag">Português</div>
             <div class="language-tag">Русский</div>
+            <div class="language-tag">Italiano</div>
+            <div class="language-tag">Nederlands</div>
             <div class="language-tag">العربية</div>
             <div class="language-tag">हिन्दी</div>
             <div class="language-tag">ไทย</div>
-            <div class="language-tag">Việt Nam</div>
-            <div class="language-tag">Nederlands</div>
+            <div class="language-tag">Tiếng Việt</div>
             <div class="language-tag">Türkçe</div>
             <div class="language-tag">Polski</div>
         </div>
@@ -242,7 +249,7 @@
         <ul>
             <li>🎉 Launch of CamLingo</li>
             <li>📸 Photo library and camera recognition</li>
-            <li>🌍 Support for 17 languages</li>
+            <li>🌍 Support for 22 languages</li>
             <li>💾 Local storage for photos and vocabulary</li>
             <li>🆓 3 free recognition attempts</li>
             <li>🎯 Personalized language learning settings</li>
