--- a/index.html
+++ b/index.html
@@ -111,9 +111,7 @@
 <body>
     <div class="container">
         <div class="language-switch">
-            <a href="index-zh-cn.html">简体中文</a>
-            <a href="index-zh-tw.html">繁體中文</a>
-            <a href="index-ja.html">日本語</a>
+            <!-- English only version -->
         </div>
         
         <div class="app-icon">📷</div>
