--- a/index-zh-cn.html
+++ b/index-zh-cn.html
@@ -211,10 +211,10 @@
         <h3>我的照片会发生什么？</h3>
         <p>您的隐私对我们很重要：</p>
         <ul>
-            <li>照片仅发送到 Google Gemini API 用于识别目的</li>
-            <li>我们不会在服务器上上传或存储任何用户信息</li>
+            <li>照片仅发送到 Google Gemini API 用于识别目的，我们不存储您的照片</li>
+            <li>我们会记录必要的账户信息，包括：订阅状态、使用次数、系统时区、使用时间以及您授权提供的姓名和邮箱</li>
             <li>您的照片和学习记录仅保存在您的设备本地</li>
-            <li>您完全控制您的数据</li>
+            <li>您可以随时通过联系我们来删除您的账户信息</li>
         </ul>
 
         <h3>我可以离线使用应用吗？</h3>
