--- a/index.html
+++ b/index.html
@@ -211,10 +211,10 @@
         <h3>What happens to my photos?</h3>
         <p>Your privacy is important to us:</p>
         <ul>
-            <li>Photos are only sent to Google Gemini API for recognition purposes</li>
-            <li>We do not upload or store any user information on our servers</li>
+            <li>Photos are only sent to Google Gemini API for recognition purposes, we do not store your photos</li>
+            <li>We record necessary account information including: subscription status, usage count, system timezone, usage time, and your authorized name and email</li>
             <li>Your photos and learning records are saved locally on your device only</li>
-            <li>You have full control over your data</li>
+            <li>You can contact us at any time to delete your account information</li>
         </ul>
 
         <h3>Can I use the app offline?</h3>
