--- a/index-zh-tw.html
+++ b/index-zh-tw.html
@@ -211,10 +211,10 @@
         <h3>我的照片會發生什麼？</h3>
         <p>您的私隱對我們很重要：</p>
         <ul>
-            <li>照片僅傳送到 Google Gemini API 用於識別目的</li>
-            <li>我們不會在伺服器上上傳或儲存任何用戶資訊</li>
+            <li>照片僅傳送到 Google Gemini API 用於識別目的，我們不儲存您的照片</li>
+            <li>我們會記錄必要的帳戶資訊，包括：訂閱狀態、使用次數、系統時區、使用時間以及您授權提供的姓名和電郵</li>
             <li>您的照片和學習記錄僅儲存在您的裝置本地</li>
-            <li>您完全控制您的資料</li>
+            <li>您可以隨時聯絡我們刪除您的帳戶資訊</li>
         </ul>
 
         <h3>我可以離線使用應用程式嗎？</h3>
