--- a/index-ja.html
+++ b/index-ja.html
@@ -211,10 +211,10 @@
         <h3>私の写真はどうなりますか？</h3>
         <p>あなたのプライバシーは私たちにとって重要です：</p>
         <ul>
-            <li>写真は認識目的でGoogle Gemini APIにのみ送信されます</li>
-            <li>サーバーにユーザー情報をアップロードや保存はしません</li>
+            <li>写真は認識目的でGoogle Gemini APIにのみ送信され、写真を保存することはありません</li>
+            <li>必要なアカウント情報を記録します：サブスクリプション状況、使用回数、システムタイムゾーン、使用時間、および認証されたお名前とメールアドレス</li>
             <li>写真と学習記録はデバイスローカルにのみ保存されます</li>
-            <li>データを完全にコントロールできます</li>
+            <li>いつでもお問い合わせいただければアカウント情報を削除できます</li>
         </ul>
 
         <h3>オフラインでアプリを使用できますか？</h3>
