--- a/index-ko.html
+++ b/index-ko.html
@@ -211,10 +211,10 @@
         <h3>내 사진은 어떻게 되나요?</h3>
         <p>여러분의 개인정보 보호는 우리에게 중요합니다:</p>
         <ul>
-            <li>사진은 인식 목적으로만 Google Gemini API로 전송됩니다</li>
-            <li>서버에 사용자 정보를 업로드하거나 저장하지 않습니다</li>
+            <li>사진은 인식 목적으로만 Google Gemini API로 전송되며, 사진을 저장하지 않습니다</li>
+            <li>필요한 계정 정보를 기록합니다: 구독 상태, 사용 횟수, 시스템 시간대, 사용 시간, 인증된 이름과 이메일</li>
             <li>사진과 학습 기록은 기기에만 로컬로 저장됩니다</li>
-            <li>데이터를 완전히 제어할 수 있습니다</li>
+            <li>언제든지 저희에게 연락하여 계정 정보를 삭제할 수 있습니다</li>
         </ul>
 
         <h3>앱을 오프라인으로 사용할 수 있나요?</h3>
