--- a/index-es-mx.html
+++ b/index-es-mx.html
@@ -211,10 +211,10 @@
         <h3>¿Qué pasa con mis fotos?</h3>
         <p>Tu privacidad es importante para nosotros:</p>
         <ul>
-            <li>Las fotos sólo se envían a la API de Google Gemini con fines de reconocimiento</li>
-            <li>No subimos ni almacenamos información de usuario en nuestros servidores</li>
+            <li>Las fotos sólo se envían a la API de Google Gemini con fines de reconocimiento, no almacenamos tus fotos</li>
+            <li>Registramos información necesaria de la cuenta incluyendo: estado de suscripción, número de usos, zona horaria del sistema, tiempo de uso, y tu nombre y email autorizados</li>
             <li>Tus fotos y registros de aprendizaje se guardan localmente sólo en tu dispositivo</li>
-            <li>Tienes control total sobre tus datos</li>
+            <li>Puedes contactarnos en cualquier momento para eliminar tu información de cuenta</li>
         </ul>
 
         <h3>¿Puedo usar la app sin conexión?</h3>
