--- a/index-pt-pt.html
+++ b/index-pt-pt.html
@@ -211,10 +211,10 @@
         <h3>O que acontece às minhas fotografias?</h3>
         <p>A sua privacidade é importante para nós:</p>
         <ul>
-            <li>As fotografias são apenas enviadas para a API do Google Gemini para fins de reconhecimento</li>
-            <li>Não carregamos nem armazenamos qualquer informação do utilizador nos nossos servidores</li>
+            <li>As fotografias são apenas enviadas para a API do Google Gemini para fins de reconhecimento, não armazenamos as suas fotografias</li>
+            <li>Registamos informações necessárias da conta incluindo: estado da subscrição, contagem de utilização, fuso horário do sistema, tempo de utilização, e o seu nome e email autorizados</li>
             <li>As suas fotografias e registos de aprendizagem são guardados localmente apenas no seu dispositivo</li>
-            <li>Tem controlo total sobre os seus dados</li>
+            <li>Pode contactar-nos a qualquer momento para eliminar as suas informações de conta</li>
         </ul>
 
         <h3>Posso usar a aplicação offline?</h3>
