--- a/index-pt-br.html
+++ b/index-pt-br.html
@@ -211,10 +211,10 @@
         <h3>O que acontece com minhas fotos?</h3>
         <p>Sua privacidade é importante para nós:</p>
         <ul>
-            <li>As fotos são enviadas apenas para a API do Google Gemini para fins de reconhecimento</li>
-            <li>Não enviamos nem armazenamos qualquer informação do usuário em nossos servidores</li>
+            <li>As fotos são enviadas apenas para a API do Google Gemini para fins de reconhecimento, não armazenamos suas fotos</li>
+            <li>Registramos informações necessárias da conta incluindo: status de assinatura, contagem de uso, fuso horário do sistema, tempo de uso, e seu nome e email autorizados</li>
             <li>Suas fotos e registros de aprendizado são salvos localmente apenas no seu dispositivo</li>
-            <li>Você tem controle total sobre seus dados</li>
+            <li>Você pode nos contatar a qualquer momento para deletar suas informações de conta</li>
         </ul>
 
         <h3>Posso usar o aplicativo offline?</h3>
