--- a/index-fr-fr.html
+++ b/index-fr-fr.html
@@ -211,10 +211,10 @@
         <h3>Qu'arrive-t-il à mes photos ?</h3>
         <p>Votre confidentialité est importante pour nous :</p>
         <ul>
-            <li>Les photos ne sont envoyées qu'à l'API Google Gemini à des fins de reconnaissance</li>
-            <li>Nous ne téléchargeons ni ne stockons aucune information utilisateur sur nos serveurs</li>
+            <li>Les photos ne sont envoyées qu'à l'API Google Gemini à des fins de reconnaissance, nous ne stockons pas vos photos</li>
+            <li>Nous enregistrons les informations de compte nécessaires incluant : statut d'abonnement, nombre d'utilisations, fuseau horaire système, temps d'utilisation, et vos nom et email autorisés</li>
             <li>Vos photos et enregistrements d'apprentissage sont sauvegardés localement uniquement sur votre appareil</li>
-            <li>Vous avez un contrôle total sur vos données</li>
+            <li>Vous pouvez nous contacter à tout moment pour supprimer vos informations de compte</li>
         </ul>
 
         <h3>Puis-je utiliser l'application hors ligne ?</h3>
