--- a/index-de.html
+++ b/index-de.html
@@ -211,10 +211,10 @@
         <h3>Was passiert mit meinen Fotos?</h3>
         <p>Ihre Privatsphäre ist uns wichtig:</p>
         <ul>
-            <li>Fotos werden nur zu Erkennungszwecken an die Google Gemini API gesendet</li>
-            <li>Wir laden keine Benutzerinformationen auf unsere Server hoch oder speichern sie dort</li>
+            <li>Fotos werden nur zu Erkennungszwecken an die Google Gemini API gesendet, wir speichern Ihre Fotos nicht</li>
+            <li>Wir erfassen notwendige Kontoinformationen einschließlich: Abonnementstatus, Nutzungsanzahl, Systemzeitzone, Nutzungszeit und Ihren autorisierten Namen und E-Mail</li>
             <li>Ihre Fotos und Lernaufzeichnungen werden nur lokal auf Ihrem Gerät gespeichert</li>
-            <li>Sie haben die volle Kontrolle über Ihre Daten</li>
+            <li>Sie können uns jederzeit kontaktieren, um Ihre Kontoinformationen zu löschen</li>
         </ul>
 
         <h3>Kann ich die App offline verwenden?</h3>
