--- a/index-ru.html
+++ b/index-ru.html
@@ -211,10 +211,10 @@
         <h3>Что происходит с моими фотографиями?</h3>
         <p>Ваша конфиденциальность важна для нас:</p>
         <ul>
-            <li>Фотографии отправляются только в API Google Gemini для целей распознавания</li>
-            <li>Мы не загружаем и не храним никакую пользовательскую информацию на наших серверах</li>
+            <li>Фотографии отправляются только в API Google Gemini для целей распознавания, мы не храним ваши фотографии</li>
+            <li>Мы записываем необходимую информацию аккаунта включая: статус подписки, количество использований, системный часовой пояс, время использования, и ваши авторизованные имя и электронную почту</li>
             <li>Ваши фотографии и записи обучения сохраняются локально только на вашем устройстве</li>
-            <li>Вы имеете полный контроль над вашими данными</li>
+            <li>Вы можете связаться с нами в любое время для удаления информации вашего аккаунта</li>
         </ul>
 
         <h3>Могу ли я использовать приложение в автономном режиме?</h3>
