--- a/index-it.html
+++ b/index-it.html
@@ -211,10 +211,10 @@
         <h3>Cosa succede alle mie foto?</h3>
         <p>La tua privacy è importante per noi:</p>
         <ul>
-            <li>Le foto vengono inviate solo all'API di Google Gemini per scopi di riconoscimento</li>
-            <li>Non carichiamo né memorizziamo alcuna informazione utente sui nostri server</li>
+            <li>Le foto sono inviate solo all'API di Google Gemini per scopi di riconoscimento, non archiviamo le tue foto</li>
+            <li>Registriamo informazioni necessarie dell'account incluso: stato dell'abbonamento, conteggio utilizzi, fuso orario del sistema, tempo di utilizzo, e il tuo nome e email autorizzati</li>
             <li>Le tue foto e i record di apprendimento vengono salvati localmente solo sul tuo dispositivo</li>
-            <li>Hai il controllo completo sui tuoi dati</li>
+            <li>Puoi contattarci in qualsiasi momento per eliminare le informazioni del tuo account</li>
         </ul>
 
         <h3>Posso usare l'app offline?</h3>
