--- a/index-nl.html
+++ b/index-nl.html
@@ -211,10 +211,10 @@
         <h3>Wat gebeurt er met mijn foto's?</h3>
         <p>Je privacy is belangrijk voor ons:</p>
         <ul>
-            <li>Foto's worden alleen naar de Google Gemini API gestuurd voor herkenningsdoeleinden</li>
-            <li>We uploaden of bewaren geen gebruikersinformatie op onze servers</li>
+            <li>Foto's worden alleen naar de Google Gemini API gestuurd voor herkenningsdoeleinden, we bewaren je foto's niet</li>
+            <li>We registreren benodigde accountinformatie inclusief: abonnementsstatus, gebruiksaantal, systeemtijdzone, gebruikstijd, en je geautoriseerde naam en email</li>
             <li>Je foto's en leergegevens worden alleen lokaal op je apparaat bewaard</li>
-            <li>Je hebt volledige controle over je gegevens</li>
+            <li>Je kunt ons altijd contacteren om je accountinformatie te verwijderen</li>
         </ul>
 
         <h3>Kan ik de app offline gebruiken?</h3>
