--- a/index-ar.html
+++ b/index-ar.html
@@ -216,10 +216,10 @@
         <h3>ماذا يحدث لصوري؟</h3>
         <p>خصوصيتك مهمة لنا:</p>
         <ul>
-            <li>الصور ترسل فقط إلى Google Gemini API لأغراض التعرف</li>
-            <li>نحن لا نرفع أو نخزن أي معلومات مستخدم على خوادمنا</li>
+            <li>الصور ترسل فقط إلى Google Gemini API لأغراض التعرف، نحن لا نخزن صورك</li>
+            <li>نسجل معلومات الحساب الضرورية بما في ذلك: حالة الاشتراك، عدد مرات الاستخدام، المنطقة الزمنية للنظام، وقت الاستخدام، واسمك والبريد الإلكتروني المخول</li>
             <li>صورك وسجلات التعلم محفوظة محلياً على جهازك فقط</li>
-            <li>لديك السيطرة الكاملة على بياناتك</li>
+            <li>يمكنك الاتصال بنا في أي وقت لحذف معلومات حسابك</li>
         </ul>
 
         <h3>هل يمكنني استخدام التطبيق دون اتصال؟</h3>
