--- a/index-hi.html
+++ b/index-hi.html
@@ -211,10 +211,10 @@
         <h3>मेरी फोटो का क्या होता है?</h3>
         <p>आपकी गोपनीयता हमारे लिए महत्वपूर्ण है:</p>
         <ul>
-            <li>फोटो केवल पहचान उद्देश्यों के लिए Google Gemini API को भेजी जाती हैं</li>
-            <li>हम अपने सर्वर पर कोई उपयोगकर्ता जानकारी अपलोड या संग्रहीत नहीं करते</li>
+            <li>फोटो केवल पहचान उद्देश्यों के लिए Google Gemini API को भेजी जाती हैं, हम आपकी फोटो संग्रहीत नहीं करते</li>
+            <li>हम आवश्यक खाता जानकारी रिकॉर्ड करते हैं जिसमें शामिल है: सदस्यता स्थिति, उपयोग गिनती, सिस्टम समय क्षेत्र, उपयोग समय, और आपका अधिकृत नाम और ईमेल</li>
             <li>आपकी फोटो और सीखने के रिकॉर्ड केवल आपके डिवाइस पर स्थानीय रूप से सहेजे जाते हैं</li>
-            <li>आपका अपने डेटा पर पूर्ण नियंत्रण है</li>
+            <li>आप अपनी खाता जानकारी हटाने के लिए कभी भी हमसे संपर्क कर सकते हैं</li>
         </ul>
 
         <h3>क्या मैं ऐप को ऑफलाइन उपयोग कर सकता हूं?</h3>
