--- a/index-th.html
+++ b/index-th.html
@@ -211,10 +211,10 @@
         <h3>เกิดอะไรขึ้นกับภาพของฉัน?</h3>
         <p>ความเป็นส่วนตัวของคุณมีความสำคัญสำหรับเรา:</p>
         <ul>
-            <li>ภาพจะถูกส่งไปยัง Google Gemini API เพื่อวัตถุประสงค์ในการจดจำเท่านั้น</li>
-            <li>เราไม่อัปโหลดหรือจัดเก็บข้อมูลผู้ใช้ใดๆ บนเซิร์ฟเวอร์ของเรา</li>
+            <li>ภาพจะถูกส่งไปยัง Google Gemini API เพื่อวัตถุประสงค์ในการจดจำเท่านั้น เราไม่เก็บภาพของคุณ</li>
+            <li>เราบันทึกข้อมูลบัญชีที่จำเป็น ได้แก่: สถานะการสมัครสมาชิก จำนวนการใช้งาน เขตเวลาของระบบ เวลาการใช้งาน และชื่อและอีเมลที่ได้รับอนุญาตของคุณ</li>
             <li>ภาพและบันทึกการเรียนรู้ของคุณจะถูกบันทึกไว้ในเครื่องของคุณเท่านั้น</li>
-            <li>คุณมีการควบคุมข้อมูลของคุณอย่างสมบูรณ์</li>
+            <li>คุณสามารถติดต่อเราได้ตลอดเวลาเพื่อลบข้อมูลบัญชีของคุณ</li>
         </ul>
 
         <h3>ฉันสามารถใช้แอปแบบออฟไลน์ได้หรือไม่?</h3>
