--- a/index-vi.html
+++ b/index-vi.html
@@ -211,10 +211,10 @@
         <h3>Ảnh của tôi sẽ như thế nào?</h3>
         <p>Sự riêng tư của bạn rất quan trọng với chúng tôi:</p>
         <ul>
-            <li>Ảnh chỉ được gửi đến Google Gemini API cho mục đích nhận diện</li>
-            <li>Chúng tôi không tải lên hoặc lưu trữ bất kỳ thông tin người dùng nào trên máy chủ của mình</li>
+            <li>Ảnh chỉ được gửi đến Google Gemini API cho mục đích nhận diện, chúng tôi không lưu trữ ảnh của bạn</li>
+            <li>Chúng tôi ghi lại thông tin tài khoản cần thiết bao gồm: trạng thái đăng ký, số lần sử dụng, múi giờ hệ thống, thời gian sử dụng, và tên và email được ủy quyền của bạn</li>
             <li>Ảnh và bản ghi học tập của bạn chỉ được lưu cục bộ trên thiết bị của bạn</li>
-            <li>Bạn có toàn quyền kiểm soát dữ liệu của mình</li>
+            <li>Bạn có thể liên hệ với chúng tôi bất cứ lúc nào để xóa thông tin tài khoản của mình</li>
         </ul>
 
         <h3>Tôi có thể sử dụng ứng dụng ngoại tuyến không?</h3>
