--- a/index-tr.html
+++ b/index-tr.html
@@ -206,10 +206,10 @@
         <h3>Fotoğraflarıma ne olur?</h3>
         <p>Gizliliğiniz bizim için önemlidir:</p>
         <ul>
-            <li>Fotoğraflar yalnızca tanıma amaçları için Google Gemini API'sine gönderilir</li>
-            <li>Sunucularımızda herhangi bir kullanıcı bilgisini yüklemez veya saklamayız</li>
+            <li>Fotoğraflar yalnızca tanıma amaçları için Google Gemini API'sine gönderilir, fotoğraflarınızı saklamayız</li>
+            <li>Gerekli hesap bilgilerini kaydederiz: abonelik durumu, kullanım sayısı, sistem saat dilimi, kullanım süresi ve yetkilendirilmiş adınız ve e-postanız</li>
             <li>Fotoğraflarınız ve öğrenme kayıtlarınız yalnızca cihazınızda yerel olarak saklanır</li>
-            <li>Verileriniz üzerinde tam kontrole sahipsiniz</li>
+            <li>Hesap bilgilerinizi silmek için her zaman bizimle iletişime geçebilirsiniz</li>
         </ul>
 
         <h3>Uygulamayı çevrimdışı kullanabilir miyim?</h3>
