--- a/index-pl.html
+++ b/index-pl.html
@@ -211,6 +211,12 @@
         <h3>Co dzieje się z moimi zdjęciami?</h3>
         <p>Twoja prywatność jest dla nas ważna:</p>
         <ul>
+            <li>Zdjęcia są wysyłane tylko do Google Gemini API w celach rozpoznawania, nie przechowujemy Twoich zdjęć</li>
+            <li>Rejestrujemy niezbędne informacje o koncie w tym: status subskrypcji, liczbę użyć, strefę czasową systemu, czas użytkowania oraz Twoje autoryzowane imię i email</li>
+            <li>Twoje zdjęcia i zapisy nauki są zapisywane lokalnie tylko na Twoim urządzeniu</li>
+            <li>Możesz skontaktować się z nami w dowolnym momencie, aby usunąć informacje o swoim koncie</li>
+        </ul> nas ważna:</p>
+        <ul>
             <li>Zdjęcia są wysyłane tylko do Google Gemini API w celach rozpoznawania</li>
             <li>Nie przesyłamy ani nie przechowujemy żadnych informacji użytkownika na naszych serwerach</li>
             <li>Twoje zdjęcia i zapisy nauki są zapisywane lokalnie tylko na Twoim urządzeniu</li>
