--- a/website_en/index.html
+++ b/website_en/index.html
@@ -3,11 +3,191 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CamLingo – Learn Any Language from Pictures</title>
+  
+  <!-- Primary Meta Tags -->
+  <title>CamLingo – Learn Any Language from Pictures | AI-Powered Translation App</title>
+  <meta name="title" content="CamLingo – Learn Any Language from Pictures | AI-Powered Translation App" />
+  <meta name="description" content="Snap a photo, tap a word and see instant translations, examples and pronunciation. Learn 22 languages with AI-powered visual translation. Download CamLingo for iPhone and iPad." />
+  <meta name="keywords" content="language learning, translation app, AI translation, visual translation, photo translation, language app, multilingual, OCR translation, camera translation, learn languages, foreign language, language tutor, translation tool, mobile language learning, iOS language app, picture translation, text recognition, language dictionary, pronunciation guide, vocabulary builder" />
+  <meta name="author" content="CamLingo" />
+  <meta name="robots" content="index, follow" />
+  <meta name="language" content="English" />
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://mrvincent2025.github.io/camlingo-support/website_en/" />
+  <meta property="og:title" content="CamLingo – Learn Any Language from Pictures | AI-Powered Translation App" />
+  <meta property="og:description" content="Snap a photo, tap a word and see instant translations, examples and pronunciation. Learn 22 languages with AI-powered visual translation." />
+  <meta property="og:image" content="https://mrvincent2025.github.io/camlingo-support/website_en/assets/camlingo-horizontal.jpg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:site_name" content="CamLingo" />
+  <meta property="og:locale" content="en_US" />
+  
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://mrvincent2025.github.io/camlingo-support/website_en/" />
+  <meta property="twitter:title" content="CamLingo – Learn Any Language from Pictures | AI-Powered Translation App" />
+  <meta property="twitter:description" content="Snap a photo, tap a word and see instant translations, examples and pronunciation. Learn 22 languages with AI-powered visual translation." />
+  <meta property="twitter:image" content="https://mrvincent2025.github.io/camlingo-support/website_en/assets/camlingo-horizontal.jpg" />
+  
+  <!-- Additional Meta Tags -->
+  <meta name="theme-color" content="#007AFF" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+  <meta name="apple-mobile-web-app-title" content="CamLingo" />
+  <meta name="application-name" content="CamLingo" />
+  <meta name="msapplication-TileColor" content="#007AFF" />
+  <meta name="msapplication-config" content="/browserconfig.xml" />
+  
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://mrvincent2025.github.io/camlingo-support/website_en/" />
+  
+  <!-- Alternative Language Versions -->
+  <link rel="alternate" hreflang="en-US" href="https://mrvincent2025.github.io/camlingo-support/website_en/" />
+  <link rel="alternate" hreflang="en-GB" href="https://mrvincent2025.github.io/camlingo-support/index-en-uk.html" />
+  <link rel="alternate" hreflang="zh-CN" href="https://mrvincent2025.github.io/camlingo-support/index-zh-cn.html" />
+  <link rel="alternate" hreflang="zh-TW" href="https://mrvincent2025.github.io/camlingo-support/index-zh-tw.html" />
+  <link rel="alternate" hreflang="es-ES" href="https://mrvincent2025.github.io/camlingo-support/index-es-es.html" />
+  <link rel="alternate" hreflang="es-MX" href="https://mrvincent2025.github.io/camlingo-support/index-es-mx.html" />
+  <link rel="alternate" hreflang="fr-FR" href="https://mrvincent2025.github.io/camlingo-support/index-fr-fr.html" />
+  <link rel="alternate" hreflang="fr-CA" href="https://mrvincent2025.github.io/camlingo-support/index-fr-ca.html" />
+  <link rel="alternate" hreflang="pt-PT" href="https://mrvincent2025.github.io/camlingo-support/index-pt-pt.html" />
+  <link rel="alternate" hreflang="pt-BR" href="https://mrvincent2025.github.io/camlingo-support/index-pt-br.html" />
+  <link rel="alternate" hreflang="ja" href="https://mrvincent2025.github.io/camlingo-support/index-ja.html" />
+  <link rel="alternate" hreflang="ko" href="https://mrvincent2025.github.io/camlingo-support/index-ko.html" />
+  <link rel="alternate" hreflang="de" href="https://mrvincent2025.github.io/camlingo-support/index-de.html" />
+  <link rel="alternate" hreflang="ru" href="https://mrvincent2025.github.io/camlingo-support/index-ru.html" />
+  <link rel="alternate" hreflang="it" href="https://mrvincent2025.github.io/camlingo-support/index-it.html" />
+  <link rel="alternate" hreflang="nl" href="https://mrvincent2025.github.io/camlingo-support/index-nl.html" />
+  <link rel="alternate" hreflang="ar" href="https://mrvincent2025.github.io/camlingo-support/index-ar.html" />
+  <link rel="alternate" hreflang="hi" href="https://mrvincent2025.github.io/camlingo-support/index-hi.html" />
+  <link rel="alternate" hreflang="th" href="https://mrvincent2025.github.io/camlingo-support/index-th.html" />
+  <link rel="alternate" hreflang="vi" href="https://mrvincent2025.github.io/camlingo-support/index-vi.html" />
+  <link rel="alternate" hreflang="tr" href="https://mrvincent2025.github.io/camlingo-support/index-tr.html" />
+  <link rel="alternate" hreflang="pl" href="https://mrvincent2025.github.io/camlingo-support/index-pl.html" />
+  <link rel="alternate" hreflang="x-default" href="https://mrvincent2025.github.io/camlingo-support/website_en/" />
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+  
+  <!-- Stylesheets -->
   <link rel="stylesheet" href="styles.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
+  
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "MobileApplication",
+    "name": "CamLingo",
+    "description": "AI-powered language learning app that translates text from photos instantly. Learn 22 languages with visual translation technology.",
+    "url": "https://apps.apple.com/us/app/camlingo/id6747738762",
+    "applicationCategory": "EducationalApplication",
+    "operatingSystem": "iOS",
+    "operatingSystemVersion": "16.0",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD",
+      "description": "Free with in-app purchases"
+    },
+    "aggregateRating": {
+      "@type": "AggregateRating",
+      "ratingValue": "4.5",
+      "ratingCount": "100"
+    },
+    "author": {
+      "@type": "Organization",
+      "name": "CamLingo"
+    },
+    "publisher": {
+      "@type": "Organization",
+      "name": "CamLingo"
+    },
+    "keywords": "language learning, translation app, AI translation, visual translation, photo translation, language app, multilingual, OCR translation, camera translation, learn languages, foreign language, language tutor, translation tool, mobile language learning, iOS language app, picture translation, text recognition, language dictionary, pronunciation guide, vocabulary builder"
+  }
+  </script>
+  
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "CamLingo",
+    "url": "https://mrvincent2025.github.io/camlingo-support/website_en/",
+    "logo": "https://mrvincent2025.github.io/camlingo-support/website_en/assets/camlingo-horizontal.jpg",
+    "description": "AI-powered language learning app that helps users learn languages through visual translation technology.",
+    "sameAs": [
+      "https://apps.apple.com/us/app/camlingo/id6747738762"
+    ]
+  }
+  </script>
+  
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "CamLingo",
+    "url": "https://mrvincent2025.github.io/camlingo-support/website_en/",
+    "description": "AI-powered language learning app that translates text from photos instantly. Learn 22 languages with visual translation technology.",
+    "publisher": {
+      "@type": "Organization",
+      "name": "CamLingo"
+    },
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://mrvincent2025.github.io/camlingo-support/website_en/?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+  
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "How does CamLingo work?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "CamLingo uses AI-powered visual translation technology. Simply take a photo of text, tap on any word, and get instant translations, examples, and pronunciation in 22 languages."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What languages does CamLingo support?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "CamLingo supports 22 languages including English, Chinese, Spanish, French, Portuguese, Japanese, Korean, German, Russian, Italian, Dutch, Arabic, Hindi, Thai, Vietnamese, Turkish, and Polish."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is CamLingo free to use?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "CamLingo is free to download with basic features. Premium features are available through in-app purchases for enhanced translation capabilities and unlimited usage."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What devices is CamLingo available on?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "CamLingo is available for iPhone and iPad running iOS 16.0 or later."
+        }
+      }
+    ]
+  }
+  </script>
 </head>
 <body>
   <header class="site-header">
