--- a/website_en/index.html
+++ b/website_en/index.html
@@ -33,7 +33,7 @@
   
   <!-- Additional Meta Tags -->
   <meta name="theme-color" content="#007AFF" />
-  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="default" />
   <meta name="apple-mobile-web-app-title" content="CamLingo" />
   <meta name="application-name" content="CamLingo" />
