--- a/website_en/index.html
+++ b/website_en/index.html
@@ -7,7 +7,7 @@
   <!-- Primary Meta Tags -->
   <title>CamLingo – Learn Any Language from Pictures | AI-Powered Translation App</title>
   <meta name="title" content="CamLingo – Learn Any Language from Pictures | AI-Powered Translation App" />
-  <meta name="description" content="Snap a photo, tap a word and see instant translations, examples and pronunciation. Learn 22 languages with AI-powered visual translation. Download CamLingo for iPhone and iPad." />
+  <meta name="description" content="Snap a photo, tap words and see instant translations, examples and pronunciation. Learn 22 languages with AI-powered visual translation. Download CamLingo for iPhone and iPad." />
   <meta name="keywords" content="language learning, translation app, AI translation, visual translation, photo translation, language app, multilingual, OCR translation, camera translation, learn languages, foreign language, language tutor, translation tool, mobile language learning, iOS language app, picture translation, text recognition, language dictionary, pronunciation guide, vocabulary builder" />
   <meta name="author" content="CamLingo" />
   <meta name="robots" content="index, follow" />
